--- a/skins/default/list.html
+++ b/skins/default/list.html
@@ -116,7 +116,7 @@
 	</table>
 </div>
 <div class="list_footer">
-	<div class="pagination" cond="$document_list || $notice_list">
+	<div class="pagination" cond="($document_list || $notice_list) && $page_navigation->total_page > 1">
 		<a href="{getUrl('page','','document_srl','','division',$division,'last_division',$last_division)}" class="direction prev"><span></span><span></span> {$lang->first_page}</a> 
 		<block loop="$page_no=$page_navigation->getNextPage()">
 			<strong cond="$page==$page_no">{$page_no}</strong> 
